--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "visual-test-api",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "通过上传图片，进行视觉测试",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./web.js"
   },
   "repository": {
     "type": "git",
