--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "visual-test-api",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "通过上传图片，进行视觉测试",
   "main": "index.js",
   "scripts": {
     "start": "node ./web.js"
   },
+  "files": [
+    "assets",
+    "views",
+    "config.js",
+    "defaultReg.js",
+    "index.js",
+    "initDirectory.js",
+    "initExpress.js",
+    "setStorage.js",
+    "web.js",
+    "package.json",
+    "LICENSE"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/art-graph/visual-test-api.git"
